--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "materialize-css": "^1.0.0-rc.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
